[gd_scene load_steps=18 format=3 uid="uid://bosldx6yxgm4k"]

[ext_resource type="Script" path="res://Scripts/PlayerMovement.gd" id="1_nrmwm"]
[ext_resource type="Script" path="res://Scripts/GameManager.gd" id="2_gc143"]
[ext_resource type="Script" path="res://Scripts/CameraMovement.gd" id="3_j03e2"]
[ext_resource type="Script" path="res://Scripts/WeaponAnimations.gd" id="4_h3kmq"]
[ext_resource type="Script" path="res://Scripts/WeaponManager.gd" id="5_k7t50"]
[ext_resource type="PackedScene" uid="uid://lmg2re4eoeo6" path="res://Scenes/M4A1.tscn" id="6_blfox"]
[ext_resource type="Script" path="res://Scripts/M4A1.gd" id="7_mb7rs"]
[ext_resource type="PackedScene" path="res://Scenes/UI/sprite_crosshair.tscn" id="8_g4s7h"]
[ext_resource type="PackedScene" path="res://Scenes/arms.tscn" id="9_h5org"]

[sub_resource type="Animation" id="Animation_2o2ro"]
resource_name = "walk"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4axmp"]
_data = {
"walk": SubResource("Animation_2o2ro")
}

[sub_resource type="CapsuleMesh" id="CapsuleMesh_ocpwa"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_miiyo"]

[sub_resource type="Animation" id="Animation_ulu5w"]
resource_name = "object_reload"

[sub_resource type="Animation" id="Animation_lvf8i"]
resource_name = "object_shoot"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.143, -0.011, 0.147), Vector3(-0.143, -0.011, 0.179), Vector3(-0.143, -0.011, 0.147)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 2.97055, 0), Vector3(-0.139626, 2.97055, 0), Vector3(0, 2.97055, 0)]
}

[sub_resource type="Animation" id="Animation_myty3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.143, -0.011, 0.147)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 2.97055, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2ydh8"]
_data = {
"RESET": SubResource("Animation_myty3"),
"object_reload": SubResource("Animation_ulu5w"),
"object_shoot": SubResource("Animation_lvf8i")
}

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_nrmwm")

[node name="GameManager" type="Node3D" parent="."]
script = ExtResource("2_gc143")

[node name="WalkAnimationPlayer" type="AnimationPlayer" parent="GameManager"]
libraries = {
"": SubResource("AnimationLibrary_4axmp")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="GameManager"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_ocpwa")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_miiyo")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.691887, 0)
script = ExtResource("3_j03e2")

[node name="WeaponAnimations" type="Node3D" parent="Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.078, -0.651, 0.066)
script = ExtResource("4_h3kmq")

[node name="WeaponManager" type="Node3D" parent="Camera3D/WeaponAnimations"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.435, 0.44, -0.381)
script = ExtResource("5_k7t50")

[node name="M4A1" parent="Camera3D/WeaponAnimations/WeaponManager" instance=ExtResource("6_blfox")]
transform = Transform3D(-0.985408, 0, 0.17021, 0, 1, 0, -0.17021, 0, -0.985408, -0.143, -0.011, 0.147)
script = ExtResource("7_mb7rs")

[node name="AnimationPlayer_M4A1" type="AnimationPlayer" parent="Camera3D/WeaponAnimations/WeaponManager/M4A1"]
libraries = {
"": SubResource("AnimationLibrary_2ydh8")
}

[node name="crosshair" parent="Camera3D/WeaponAnimations/WeaponManager/M4A1" instance=ExtResource("8_g4s7h")]

[node name="arms" parent="Camera3D/WeaponAnimations/WeaponManager/M4A1" instance=ExtResource("9_h5org")]
transform = Transform3D(-8.00819e-09, 0, -0.183206, 0, 0.183206, 0, 0.183206, 0, -8.00819e-09, 0.301, 0.228, -0.563)
